--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
   "dependencies": {
     "async": "~0.2.8",
+    "body-parser": "^1.15.2",
     "express": "^3.2.6",
+    "multer": "^1.2.0",
     "socket.io": "~0.9.14"
   },
   "scripts": {
